--- a/HEK293T_GO_GSEA.Rmd
+++ b/HEK293T_GO_GSEA.Rmd
@@ -800,11 +800,12 @@ sN_rel_hm <- pheatmap(as.matrix(explc_sN_rel),
 #saved as sN_rel_hm_060624 as 12x5 portrait
 sN_rel_hm_nonames <- pheatmap(as.matrix(explc_sN_rel),
          color=rev(colorRampPalette(brewer.pal(n=11, name="RdBu"))(20)),
-         cluster_rows = F, show_rownames = F,
+         cluster_rows = T, show_rownames = F,
          cluster_cols = T, show_colnames = T, angle_col= "315",
          breaks=c(seq(from=-1,to=1,by=0.1)),
          scale="none",
          legend=T)
+#saved as sN_rel_hm_nonames as 5x4 portrait
 ```
 
 Making bargraph of the terms of interest downloaded from enrichr
