--- a/HEK293T_GO_GSEA.Rmd
+++ b/HEK293T_GO_GSEA.Rmd
@@ -838,7 +838,7 @@ tf_pert_bar <- ggplot(data=TF_pert_top10, aes(x=Term, y=Combined.Score))+
         axis.title.x = ggtext::element_markdown(face="bold", size=12),
         axis.title.y = ggtext::element_markdown(face="bold",size=12),
         panel.grid.major = element_line(colour = "gray80", linewidth = 0.5, linetype="dotted")) 
-#saved as tf_pert_bar as portrait 5x4
+#saved as tf_pert_bar as landscape 4x4
 ```
 
 
