--- a/HEK293T_GO_GSEA.Rmd
+++ b/HEK293T_GO_GSEA.Rmd
@@ -839,6 +839,16 @@ tf_pert_bar <- ggplot(data=TF_pert_top10, aes(x=Term, y=Combined.Score))+
         axis.title.y = ggtext::element_markdown(face="bold",size=12),
         panel.grid.major = element_line(colour = "gray80", linewidth = 0.5, linetype="dotted")) 
 #saved as tf_pert_bar as landscape 4x4
+
+tf_pert_bar_h <- ggplot(data=TF_pert_top10, aes(x=Combined.Score, y=Term))+
+  geom_bar(position="stack", stat="identity", color="black", alpha=0.6)+
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),
+        panel.background = element_rect(color="black", fill="white"),
+        axis.text = element_text(colour="black", size=10), 
+        axis.title.x = ggtext::element_markdown(face="bold", size=12),
+        axis.title.y = ggtext::element_markdown(face="bold",size=12),
+        panel.grid.major = element_line(colour = "gray80", linewidth = 0.5, linetype="dotted")) 
+#saved as tf_pert_bar_horizontal as landscape 4x4
 ```
 
 
